crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/024.cypher
WITH 1 AS x; MATCH (n) RETURN n
